--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body{
     align-items: center;
     display: flex;
     gap: 11%;
-    padding: 0 1%;
-    width: fit-content;
+    padding: 0 7%;
+    width: auto;
     /* outline: 1px solid red; */
 }
 
@@ -44,6 +44,7 @@ body{
     gap: 10%;
     background: #e1e1e1;
     cursor: pointer;
+    color: #454545;
 }
 
 .nav-link{
