--- a/style.css
+++ b/style.css
@@ -139,3 +139,57 @@ body{
 .hall-info p{
     padding: 0% 0% 0% 6%;
 }
+
+.hall-pop{
+    min-height: auto;
+    max-width: auto;
+}
+
+.hall-venue-back{
+    display: flex;
+    gap: 91%;
+    padding: 2% 0% 0% 2%;
+}
+
+.venue-close{
+    background-color: black;
+    color: white;
+    padding: 0% 1%;
+    border: 1px solid black;
+}
+
+.hall-carousel img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    align-content: center;
+    width: 35%;
+    padding: 3% 0% 0% 0%;
+}
+
+.hall-details{
+    display: flex;
+    padding: 2% 2% 0% 2%;
+    gap: 43%;
+}
+
+.hall-reserve{
+    background-color: #414141;
+    padding: 0% 1% 3% 1%;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
+.hall-reserve h4{
+    margin-top: 15%;
+}
+
+.hall-reserve button{
+    margin-top: 15%;
+    padding: 3%;
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+}
