--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body{
     display: flex;
     background: #ebebeb;
     flex-direction: column;
-    width: 100%;
     align-content: center;
     justify-content: center;
+    min-height: 100vh;
 }
 
 .nav-main{
@@ -140,14 +140,20 @@ body{
     padding: 0% 0% 0% 6%;
 }
 
+.hall-center{
+    display: flex;
+    justify-content: center;
+}
+
 .hall-pop{
-    min-height: auto;
-    max-width: auto;
+    height: 50%;
+    width: 50%;
+    box-shadow: 0px 0px 10px rgb(red, green, blue);
 }
 
 .hall-venue-back{
     display: flex;
-    gap: 91%;
+    gap: 86%;
     padding: 2% 0% 0% 2%;
 }
 
@@ -175,7 +181,7 @@ body{
 }
 
 .hall-reserve{
-    background-color: #414141;
+    background-color: #a09e9e;
     padding: 0% 1% 3% 1%;
     justify-content: center;
     align-content: center;
