--- a/style.css
+++ b/style.css
@@ -15,9 +15,17 @@ body{
     display: flex;
     background: #ebebeb;
     flex-direction: column;
+    width: 100%;
     align-content: center;
     justify-content: center;
-    min-height: 100vh;
+}
+
+.navv-main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #ebebeb;
+    height: 4.5rem;
 }
 
 .nav-main{
@@ -29,6 +37,7 @@ body{
     padding: 1%;
     position: fixed;
     top: 0%;
+    background-color: #ebebeb;
     /* outline: 1px solid red; */
 }
 
@@ -63,11 +72,12 @@ body{
 .home-content{
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* min-height: 100vh; */
+    /* outline: 1px solid red; */
     width: 100%;
-    padding: 17%;
+    padding: 8% 17%;
     gap: 2.5rem;
 }
 
@@ -91,38 +101,100 @@ body{
 }
 
 .butt-main{
-    padding: 2%;
-    background-color: black;
+    padding: 1rem;
+    background-color: rgb(24, 24, 24);
     color: white;
     border-radius: 3px;
-    border: 1px solid black;
+    border: 1px solid rgb(24, 24, 24);
     cursor: pointer;
+    text-decoration: none;
+    text-align: justify;
 }
 
 .butt-sub{
-    padding: 2%;
+    padding: 1rem;
     cursor: pointer;
+    text-decoration: none;
+    border: 1px solid rgb(24, 24, 24);
+    border-radius: 3px;
+    color: rgb(24, 24, 24);
+    text-align: justify;
 }
 
-.navv-main{
-    width: 100vw;
+.form-container{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 3%;
+    gap: 1.2rem;
+    background-color: #f7f7f7;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.089);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+    gap: 10px;
+}
+
+.input-box{
+    padding: 0.5rem 1rem;
+    border: 1px solid #636363c0;
+    border-radius: 3px;
+}
+
+.sign-in{
+    width: 100%;
+    text-align: center;
+    padding: 0.7rem;
+    /* cursor: pointer; */
+}
+
+.sign-in-with-g{
+    width: 100%;
+    text-align: center;
+    padding: 0.7rem
+}
+
+.cards-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* min-height: 100vh; */
+    width: 100%;
+    padding: 5%;
+    gap: 2rem;
 }
 
 .hall-card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 17%;
+    width: 25rem;
+    gap: 0.8rem;
     justify-content: center;
-    align-items: center;   
+    /* outline: 1px solid red;    */
 }
 
 .hall-info{
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
     width: 100%;
+    padding: 0.5rem;
+    /* outline: 1px solid red; */
+}
 
+.hall-name-star{
+    display: flex;
+    justify-content: space-between;
+}
+
+.hall-name{
+    max-width: 16rem;
 }
 
 .hall-img img{
@@ -130,72 +202,71 @@ body{
     width: 100%;
 }
 
-
-.hall-info h4{
+.loader {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
     display: inline-block;
-    padding: 6%; 
-}
+    border-top: 3px solid #000000;
+    border-right: 3px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+  }
+  
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
 
-.hall-info p{
-    padding: 0% 0% 0% 6%;
-}
-
-.hall-center{
-    display: flex;
-    justify-content: center;
-}
-
-.hall-pop{
-    height: 50%;
-    width: 50%;
-    box-shadow: 0px 0px 10px rgb(red, green, blue);
-}
-
-.hall-venue-back{
-    display: flex;
-    gap: 86%;
-    padding: 2% 0% 0% 2%;
-}
-
-.venue-close{
-    background-color: black;
-    color: white;
-    padding: 0% 1%;
-    border: 1px solid black;
-}
-
-.hall-carousel img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: center;
-    align-content: center;
-    width: 35%;
-    padding: 3% 0% 0% 0%;
-}
-
-.hall-details{
-    display: flex;
-    padding: 2% 2% 0% 2%;
-    gap: 43%;
-}
-
-.hall-reserve{
-    background-color: #a09e9e;
-    padding: 0% 1% 3% 1%;
-    justify-content: center;
-    align-content: center;
+.details-btn{
+    width: 100%;
     text-align: center;
+    text-decoration: none;
+    padding: 0.8rem;
 }
 
-.hall-reserve h4{
-    margin-top: 15%;
+.user-menu{
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    flex-direction: column;
+    width: 16rem;
+    background-color: #eeeeee;
+    border-radius: 3px;
+    padding: 1.2rem;
+    position: absolute;
+    right: 1rem;
+    top: 5rem;
+    gap: 0.5rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.089);
 }
 
-.hall-reserve button{
-    margin-top: 15%;
-    padding: 3%;
-    background-color: black;
-    color: white;
-    border: 1px solid black;
+.user-menu-hidden{
+    display: none;
+}
+
+.user-menu-category{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.user-menu-hr{
+    border: none;
+    width: 100%;
+    height: 1px;
+    background-color: #454545;
+}
+
+.user-menu-link{
+    text-decoration: none;
+    color: #454545
+}
+
+.user-menu-link:focus{
+    color: #636363
 }
